# lizards

./: Cargo.toml  README.md  sample3.dblzd  sample3.lizard  testfile.dblzd  testfile.lizard  testfile.txt  testfile.unenc.txt
src/: decode.rs  encode.rs  file_io.rs  header.rs  helpers.rs  huffman.rs  main.rs  offset_len.rs  output_stream.rs
